// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Page Tests should match the snapshot when name is :Dhananjay 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <p>
        Edit 
        <code>
          src/App.tsx
        </code>
         and save to reload.
      </p>
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Hello Dhananjay. Welcome to Learn React!
      </a>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Home Page Tests should match the snapshot when name is :Gauri 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <p>
        Edit 
        <code>
          src/App.tsx
        </code>
         and save to reload.
      </p>
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Hello Gauri. Welcome to Learn React!
      </a>
    </header>
  </div>
</DocumentFragment>
`;

exports[`Home Page Tests should match the snapshot when name is :Vishnu 1`] = `
<DocumentFragment>
  <div
    class="App"
  >
    <header
      class="App-header"
    >
      <img
        alt="logo"
        class="App-logo"
        src="logo.svg"
      />
      <p>
        Edit 
        <code>
          src/App.tsx
        </code>
         and save to reload.
      </p>
      <a
        class="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Hello Vishnu. Welcome to Learn React!
      </a>
    </header>
  </div>
</DocumentFragment>
`;
